@@ -178,6 +178,7 @@ extern int	drawTime; // FS: Draw Time on Automap
 int	useIntGus; // FS: Use internal GUS1M WADs
 int novert; // FS: No vertical mouse movement
 int noprecache; // FS: No graphics precaching
+int noquitsound; // FS: No quit sound
 
 extern int	use_wpnbinds; // FS: Custom weapon keys
 extern int	wpn_shotgun; // FS: Custom weapon keys
@@ -300,6 +301,7 @@ default_t	extendeddefaults[] =
 	{ "useIntGus", &useIntGus, 0}, // FS: Use internal GUS WADs
 	{ "novert", &novert, 0}, // FS: No vertical mouse movement
 	{ "noprecache", &noprecache, 0}, // FS: No graphics precaching
+	{ "noquitsound", &noquitsound, 0}, // FS: No quit sound
 
 	// FS: Use custom weapon binds
 	{ "use_wpnbinds", &use_wpnbinds, 0},
